--- a/frontend/src/pages/ServicesSubPages/Hero.css
+++ b/frontend/src/pages/ServicesSubPages/Hero.css
@@ -102,7 +102,7 @@
     width: 90%;
     height: auto;
     top: 6rem;
-    left: 1rem;
+    left: 1rem!important;
     padding: 0;
     text-align: left;
     gap: 0px;
